// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SIWESignInfo renders correctly for SIWE signature request 1`] = `
<div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Message
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        I accept the MetaMask Terms of Service: https://community.metamask.io/tos
      </p>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        URL
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        metamask.github.io
      </p>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Network
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        Ethereum Mainnet
      </p>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Account
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
        >
          <div
            class="mm-avatar-account__jazzicon"
          >
            <div
              style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(200, 20, 59);"
            >
              <svg
                height="16"
                width="16"
                x="0"
                y="0"
              >
                <rect
                  fill="#017B8E"
                  height="16"
                  transform="translate(0.39972303467835485 -0.4108005578484912) rotate(317.9 8 8)"
                  width="16"
                  x="0"
                  y="0"
                />
                <rect
                  fill="#F2B602"
                  height="16"
                  transform="translate(-3.7466980184561267 5.704967714142398) rotate(134.1 8 8)"
                  width="16"
                  x="0"
                  y="0"
                />
                <rect
                  fill="#FA8E00"
                  height="16"
                  transform="translate(-12.856136345377399 -5.7794405216344416) rotate(364.0 8 8)"
                  width="16"
                  x="0"
                  y="0"
                />
              </svg>
            </div>
          </div>
        </div>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-left-2 mm-box--color-inherit"
          data-testid="confirm-info-row-display-name"
        >
          0x935e7...05477
        </p>
      </div>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Version
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        1
      </p>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Chain ID
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        1
      </p>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Nonce
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        32891757
      </p>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Issued
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        30 September 2021, 16:25
      </p>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Request ID
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        some_id
      </p>
    </div>
  </div>
</div>
`;

exports[`SIWESignInfo renders correctly for SIWE signature request with resources 1`] = `
<div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Message
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        I accept the MetaMask Terms of Service: https://community.metamask.io/tos
      </p>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        URL
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        metamask.github.io
      </p>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Network
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        Ethereum Mainnet
      </p>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Account
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
        >
          <div
            class="mm-avatar-account__jazzicon"
          >
            <div
              style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(200, 20, 59);"
            >
              <svg
                height="16"
                width="16"
                x="0"
                y="0"
              >
                <rect
                  fill="#017B8E"
                  height="16"
                  transform="translate(0.39972303467835485 -0.4108005578484912) rotate(317.9 8 8)"
                  width="16"
                  x="0"
                  y="0"
                />
                <rect
                  fill="#F2B602"
                  height="16"
                  transform="translate(-3.7466980184561267 5.704967714142398) rotate(134.1 8 8)"
                  width="16"
                  x="0"
                  y="0"
                />
                <rect
                  fill="#FA8E00"
                  height="16"
                  transform="translate(-12.856136345377399 -5.7794405216344416) rotate(364.0 8 8)"
                  width="16"
                  x="0"
                  y="0"
                />
              </svg>
            </div>
          </div>
        </div>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-left-2 mm-box--color-inherit"
          data-testid="confirm-info-row-display-name"
        >
          0x935E7...05477
        </p>
      </div>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Version
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        1
      </p>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Chain ID
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        1
      </p>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Nonce
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        32891757
      </p>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Issued
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        30 September 2021, 16:25
      </p>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Request ID
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        some_id
      </p>
    </div>
  </div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      style="align-items: center;"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
      >
        Resources
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        ipfs://Qme7ss3ARVgxv6rXqVPiikMJ8u2NLgmgszg13pYrDKEoiu
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        https://example.com/my-web2-claim.json
      </p>
    </div>
  </div>
</div>
`;
